--- a/web/templates/board.gohtml
+++ b/web/templates/board.gohtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>글 목록</title>
+    <link rel="stylesheet" href="/web/static/css/style.css">
 </head>
 <body>
     {{range .}}
