--- a/web/templates/write.gohtml
+++ b/web/templates/write.gohtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>게시판 생성기</title>
+    <link rel="stylesheet" href="/web/static/css/style.css">
 </head>
 <body>
     <form action="" method="POST">
