--- a/web/templates/index.gohtml
+++ b/web/templates/index.gohtml
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="/web/static/css/style.css">
 </head>
 <body>
-    <button type="button" onclick="location.href='/write'">글쓰기</button>
-    <button type="button" onclick="location.href='/board'">글 목록</button>
+    <div class="body_center">
+        <button type="button" class="button1" onclick="location.href='/write'">글쓰기</button>
+        <button type="button" class="button1" onclick="location.href='/board'">글 목록</button>
+    </div>
 </body>
 </html>
