--- a/web/templates/post.gohtml
+++ b/web/templates/post.gohtml
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/web/static/css/style.css">
     <title>{{.Title}}</title>
 </head>
 <body>
