--- a/web/templates/index.gohtml
+++ b/web/templates/index.gohtml
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="/web/static/css/style.css">
 </head>
 <body>
+    <div class="main_title">
+        <h2>@ board generator</h2>
+
+    </div>
     <div class="body_center">
         <button type="button" class="button1" onclick="location.href='/write'">글쓰기</button>
         <button type="button" class="button1" onclick="location.href='/board'">글 목록</button>
