--- a/web/templates/board.gohtml
+++ b/web/templates/board.gohtml
@@ -19,5 +19,15 @@
             <br><br>
         </div>
     {{ end }}
+    <div class="sub_title">
+        <form method="post">
+            <select name="target">
+                <option value="title">제목</option>
+                <option value="author">작성자</option>
+            </select>
+            <input type="text" name="v">
+            <button type="submit">검색</button>
+        </form>
+    </div>
 </body>
 </html>
