--- a/web/templates/board.gohtml
+++ b/web/templates/board.gohtml
@@ -18,7 +18,7 @@
     </div>
     {{range .PostData}}
         <div class="post_box">
-            <a href="/post?id={{.ID}}">{{.Title}}</a><br>
+            <a href="/post/{{.ID}}">{{.Title}}</a><br>
             {{.ID}} | {{.Author}} |
             <br><br>
         </div>
